# landon

./: .gitattributes  .gitignore  .travis.yml  404.html  Cargo.toml  README.md  azure-pipelines.yml  blender-armature-to-json.py  blender-mesh-to-json.py  index.html  install-addon.py  introduction.html  package-lock.json  package.json  print.html  run-addon.py  searchindex.js  searchindex.json  webpack.config.js  webpack.prod.js
.github/workflows/: ci.yml
api/: search-index.js  settings.html  source-files.js
api/blender_armature/: all.html  enum.Axis.html  enum.BlenderError.html  enum.Bone.html  enum.FlattenArmatureError.html  enum.Hand.html  enum.JointIndicesRef.html  fn.blend_towards_bones.html  fn.flatten_exported_armatures.html  fn.get_surrounding_keyframes.html  fn.interpolate_bone.html  fn.interpolate_dual_quats.html  fn.linear_200_milliseconds.html  fn.parse_armatures_from_blender_stdout.html  index.html  sidebar-items.js  struct.Action.html  struct.ActionKeyframes.html  struct.BlenderArmature.html  (+9 more)
blender-armature/: Cargo.toml  index.html  install-armature-to-json.py  run-armature-to-json.py
blender-armature/bone-groups/: index.html
blender-armature/pose-markers/: index.html
blender-armature/src/: action.rs  armature-to-json.py  armature_serde.rs  blender-armature-to-json.py  bone.rs  bone_position.rs  convert.rs  coordinate_system.rs  export.rs  interpolate.rs  lib.rs  serde.rs  test_util.rs
blender-armature/src/action/: action_keyframes.rs  bone_keyframes.rs
blender-armature/src/action/action_keyframes/: sample.rs
blender-armature/src/action/action_keyframes/action_keyframes_serde/: deserialize.rs  serialize.rs
blender-armature/src/action/action_keyframes/sample/: joint_indices.rs  sample_desc.rs  surrounding_keyframes.rs
blender-armature/src/action/action_keyframes/sample/sample_desc/: frame_offset.rs
blender-armature/src/action/bone_keyframes/: bone_keyframe.rs  sample.rs  sorted_keyframes.rs
blender-armature/src/action/bone_keyframes/sorted_keyframes/: deserialize.rs
blender-armature/src/interpolate/: interpolate_action.rs  interpolated_bones.rs  interpolation_settings.rs  sample_action.rs
blender-armature/src/interpolate/interpolate_action/: surrounding_keyframes.rs
blender-armature/src/interpolate/interpolation_settings/: action_settings.rs
blender-iks-to-fks/: index.html
blender-mesh/: Cargo.toml  index.html
blender-mesh/custom-properties/: index.html
blender-mesh/materials/: index.html
blender-mesh/src/: bone.rs  bounding_box.rs  combine_indices.rs  create_mesh.rs  custom_properties.rs  custom_property.rs  export.rs  face_tangents.rs  individual_vertex.rs  interleave.rs  lib.rs  material.rs  tangent.rs  test_utils.rs  triangulate.rs  vertex_data.rs  vertex_data_lookup.rs  y_up.rs
blender-mesh/src/combine_indices/: create_single_index_config.rs  mod.rs  weighted_normals.rs
blender-mesh/src/create_mesh/: pbr_cube_without_textures.rs
blender-mesh/src/vertex_attributes/: mod.rs  single_indexed.rs  vertex_attribute.rs
blender-mesh/src/vertex_attributes/single_indexed/: interleave.rs
blender-mesh/src/vertex_data/: mod.rs  vertex_attribute.rs
blender-mesh/tests/: skinned_letter_f.blend  skinned_letter_f.rs
crates/blender-export-test/: Cargo.toml  README.md
crates/blender-export-test/src/: basic_cube.blend  basic_cube.rs  custom_mesh_properties.blend1  filesystem.rs  gold_material.blend  gold_material.rs  lib.rs  multiple_armatures.blend  multiple_armatures.rs  multiple_meshes.blend  multiple_meshes.rs  principled_material_no_input_nodes.blend  principled_material_no_input_nodes.rs  principled_material_normal_map.blend  principled_material_normal_map.rs  principled_material_single_channel_input.blend  principled_material_single_channel_input.rs  principled_material_texture_inputs.blend  principled_material_texture_inputs.rs  principled_material_uniform_input_nodes.rs  principled_material_with_input_nodes.blend  principled_material_with_input_nodes.rs  skinned_letter_f.rs  suzanne.blend  textured_cube.blend  textured_cube.rs
crates/blender-export-test/src/tests/: basic_cube.rs  blender_process.rs  bone_groups.blend  bone_groups.rs  custom_mesh_properties.blend  custom_mesh_properties.blend1  custom_mesh_properties.rs  mod.rs  multiple_armatures.blend  multiple_armatures.rs  multiple_meshes.blend  multiple_meshes.rs  non_bone_vertex_group.blend  non_bone_vertex_group.rs  pose_markers.blend  pose_markers.rs  principled_material_no_input_nodes.blend  principled_material_no_input_nodes.rs  principled_material_normal_map.blend  principled_material_normal_map.rs  principled_material_single_channel_input.blend  principled_material_single_channel_input.rs  principled_material_texture_inputs.rs  principled_material_uniform_input_nodes.blend  principled_material_uniform_input_nodes.rs  skinned_letter_f.blend  skinned_letter_f.rs  test_utils.rs  textured_cube.rs
crates/blender-export-test/src/tests/rigify/: rigify-basic-human-generated.blend
guide/: book.toml
landon-cli/: index.html
mesh-visualizer/: Cargo.toml  README.md  build.rs  build.sh  index.html  index.js  package-lock.json  package.json  watch.sh
mesh-visualizer/src/: assets.rs  dual-quat-vertex-shader.glsl  lib.rs  non-skinned-fragment-shader.glsl  non-skinned-vertex-shader.glsl  shader.rs  state.rs  web_apis.rs
mesh-visualizer/src/render/: mod.rs
mesh-visualizer/src/shader/: dual-quat-fragment.glsl  dual-quat-vertex.glsl  mod.rs  non-skinned-fragment.glsl  non-skinned-non-textured-fragment.glsl  non-skinned-non-textured-vertex.glsl  non-skinned-vertex.glsl
mesh-visualizer/src/state_wrapper/: mod.rs  msg.rs  state.rs
mesh-visualizer/src/state_wrapper/state/: camera.rs  mod.rs
mesh-visualizer/src/view/: canvas.rs  controls.rs  mod.rs
src/: cli.yml  lib.rs  main.rs  subcommands.rs
tests/: basic_cube.blend  basic_cube.rs  gold_material.blend  multiple-meshes.rs  multiple_armatures.blend  multiple_armatures.rs  multiple_meshes.blend  multiple_meshes.rs  skinned_letter_f.blend  skinned_letter_f.rs  textured_cube.blend  textured_cube.rs
(+170 files in other folders)
