[package]
name = "landon"
version = "0.1.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = true
description = "A collection of tools, data structures and methods for exporting Blender data (such as meshes and armatures) and preparing it for your rendering pipeline."
keywords = ["blender", "export", "exporter", "mesh", "armature"]
license = "MIT"
repository = "https://github.com/chinedufn/landon"
documentation = "https://docs.rs/landon"
edition = "2018"

[dependencies]
clap = {version = "2.32.0", features = ["yaml"]}

[workspace]
members = [
  # TODO: Rename to `Mesh` and `Armature`
  "blender-armature",
  "blender-mesh",
  "mesh-visualizer"
]
