[package]
name = "landon"
version = "0.8.7"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = true
description = "A collection of tools, data structures and methods for exporting Blender data (such as meshes and armatures) and preparing it for your rendering pipeline."
keywords = ["blender", "export", "exporter", "mesh", "armature"]
license = "MIT"
repository = "https://github.com/chinedufn/landon"
documentation = "https://docs.rs/landon"
edition = "2018"

[features]
cli = ["structopt"]
default = ["cli"]

[dependencies]
anyhow = "1"
blender-armature = {path = "./blender-armature", version = "0.3.5"}
blender-mesh = {path = "./blender-mesh", version = "0.8.3"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

structopt = {version = "0.3", optional = true}

[workspace]
members = [
  # TODO: Rename to `Mesh` and `Armature` since the data structures aren't blender specific
  "blender-armature",
  "blender-mesh",
  "crates/blender-export-test",
  "crates/iks-to-fks",
  "mesh-visualizer"
]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
