[package]
name = "blender-armature"
version = "0.6.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "Serialize / deserialize Blender armatures"
keywords = ["blender", "skeleton", "armature", "bone", "vertex"]
license = "MIT"
repository = "https://github.com/chinedufn/landon"
documentation = "https://docs.rs/landon"
edition = "2018"

[dependencies]
anyhow = "1"
nalgebra = "0.16.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
