[package]
name = "blender-mesh"
version = "0.0.2"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = true
description = "Serialize / deserialize Blender armatures"
keywords = ["blender", "skeleton", "armature", "bone", "vertex"]
license = "MIT"
repository = "https://github.com/chinedufn/blender-exporter"
documentation = "https://docs.rs/blender-exporter"

[dependencies]
failure = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
blender-armature = { version = "0.0.1", path = "../blender-armature" }
