[package]
name = "blender-mesh"
version = "0.4.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = true
description = "Serialize / deserialize Blender armatures"
keywords = ["blender", "skeleton", "armature", "bone", "vertex"]
license = "MIT"
repository = "https://github.com/chinedufn/landon"
documentation = "https://docs.rs/landon"
edition = "2018"

[dependencies]
failure = "0.1.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
nalgebra = {version = "0.16", features = ["serde-serialize"]}
log = "0.4.6"

[dev-dependencies]
blender-armature = { version = "0.1.9", path = "../blender-armature" }
