[package]
name = "blender-mesh"
version = "0.6.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = true
description = "Serialize / deserialize Blender armatures"
keywords = ["blender", "skeleton", "armature", "bone", "vertex"]
license = "MIT"
repository = "https://github.com/chinedufn/landon"
documentation = "https://docs.rs/landon"
edition = "2018"

[dependencies]
# Remove the dependency and just keep the few math functions we need in the crate
# TODO: Replace with thiserror
failure = "0.1.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
thiserror = "1"
# Remove the dependency and just keep the few math functions we need in the crate
nalgebra = {version = "0.16", features = ["serde-serialize"]}

[dev-dependencies]
blender-armature = { version = "0.2.0", path = "../blender-armature" }
serde_json = "1"
