[package]
name = "mesh-visualizer"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
blender-mesh = { path = "../blender-mesh" }
blender-armature = { path = "../blender-armature" }
nalgebra = "0.16.12"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3.6"
wasm-bindgen-futures = "0.3.6"
futures = "0.1.20"
wasm-bindgen = "0.2.29"

[dependencies.web-sys]
version = "=0.3.6"
features = [
  'Document',
  'Element',
  'EventTarget',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'MouseEvent',
  'Node',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

[build-dependencies]
blender-armature = { path = "../blender-armature" }
blender-mesh = { path = "../blender-mesh" }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.33"

