[package]
name = "mesh-visualizer"
version = "0.0.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.0.1"
blender-armature = { path = "../blender-armature" }
blender-mesh = { path = "../blender-mesh" }
console_error_panic_hook = "0.1.5"
console_log = "0.1.2"
js-sys = "0.3.22"
log = "0.4.6"
# Until https://github.com/dimforge/nalgebra/pull/810 lands
nalgebra = {git = "https://github.com/chinedufn/nalgebra", branch = "dual-quaternion"}
#nalgebra = "0.16.12"
serde = "1.0"
virtual-dom-rs = "0.6.9"
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlImageElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Performance',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

[build-dependencies]
bincode = "1.0.1"
blender-armature = { path = "../blender-armature" }
blender-mesh = { path = "../blender-mesh" }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.33"
