[package]
name = "blender-export-test"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blender-mesh = {path = "../../blender-mesh"}
blender-armature = {path = "../../blender-armature"}
serde = "1"
serde_json = "1"
